[project]
name = "mcp-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "fastmcp>=2.11.2",
    "google-api-python-client>=2.178.0",
    "markdownify>=1.1.0",
    "openai>=1.99.6",
    "pdf2docx>=0.5.8",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "readabilipy>=0.3.0",
    "youtube-search-python>=1.6.6",
]
